# TerminalSim

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  release.yml
docs/: api.md
docs/superpowers/plans/: 2026-04-18-logging.md
docs/superpowers/specs/: 2026-04-18-logging-design.md
examples/: CMakeLists.txt  time_units_verification.cpp
installer/: CMakeLists.txt  README.md
installer/assets/: README.md  icon.icns
installer/cpack/: CPackOptions.cmake.in
installer/cpack/linux/: postinst  prerm
installer/cpack/macos/: Info.plist.in
installer/cpack/windows/: nsis_extra.nsh.in
installer/deploy/: deploy.cmake  deploy_linux.cmake  deploy_macos.cmake  deploy_windows.cmake
installer/ifw/config/: controlscript.qs
installer/service/linux/: terminalsim.service
installer/service/macos/: com.aredah.terminalsim.plist
installer/service/windows/: install-service.ps1  uninstall-service.ps1
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  LogCategories.cpp  LogCategories.h  LogMessageHandler.cpp  LogMessageHandler.h  TerminalSimLogger.cpp  TerminalSimLogger.h  common.cpp  common.h
src/dwell_time/: CMakeLists.txt  container_dwell_time.cpp  container_dwell_time.h
src/graph/: Algorithms.h  CMakeLists.txt  Edge.h  Graph.h
src/server/: CMakeLists.txt  command_processor.cpp  command_processor.h  rabbit_mq_handler.cpp  rabbit_mq_handler.h  terminal_graph_server.cpp  terminal_graph_server.h
src/terminal/: CMakeLists.txt  terminal.cpp  terminal.h  terminal_graph.cpp  terminal_graph.h  terminal_graph_impl.cpp  terminal_graph_impl.h  terminal_path.h  terminal_path_segment.h
tests/: CMakeLists.txt  test_dwell_time.cpp  test_pathfound_contract.cpp  test_server.cpp  test_terminal.cpp  test_terminal_actuals_contract.cpp  test_terminal_graph.cpp  test_terminalsim_logger.cpp
